tests/fixtures/invalid/array_length_star_vla.c
int take(int values[*]);
int main(void) {
    return 0;
}
